syntax = "proto3";

package textparserlib;

import "koinos/options.proto"; 

message data {
   bool bool = 1;
   string string = 2;
   bytes bytes = 3;
   uint64 uint64 = 4;
   uint32 uint32 = 5;
   int64 int64 = 6;
   int32 int32 = 7;
   data nested = 8;
   repeated data repeated = 9;
};

message result {
   string error = 1;
   uint32 protoId = 2;
   string type = 3;
   data data = 4;
}
